[gd_scene load_steps=9 format=3 uid="uid://jcj00eruawl0"]

[ext_resource type="Script" uid="uid://blpiht0xuoaa8" path="res://database/database.gd" id="1_8x7pb"]
[ext_resource type="PackedScene" uid="uid://d26lkxydpbp38" path="res://database/database_header.tscn" id="1_rw4k8"]
[ext_resource type="PackedScene" uid="uid://cejexibyxff8t" path="res://database/database_item.tscn" id="2_fvenl"]
[ext_resource type="PackedScene" uid="uid://dx10i03usiffl" path="res://database/database_filter.tscn" id="4_8x7pb"]
[ext_resource type="PackedScene" uid="uid://cghapkildl4rr" path="res://components/tooltip_component.tscn" id="5_eg6c8"]
[ext_resource type="Texture2D" uid="uid://yeia6p55r0s0" path="res://plus.png" id="6_1c18i"]

[sub_resource type="InputEventKey" id="InputEventKey_8x7pb"]
ctrl_pressed = true
pressed = true
physical_keycode = 68

[sub_resource type="Shortcut" id="Shortcut_eg6c8"]
events = [SubResource("InputEventKey_8x7pb")]

[node name="Database" type="PanelContainer" node_paths=PackedStringArray("scroll_container", "database_items_container", "add_button", "database_header", "database_filter")]
offset_right = 1500.0
offset_bottom = 100.0
size_flags_vertical = 3
focus_mode = 1
script = ExtResource("1_8x7pb")
scroll_container = NodePath("VBoxContainer/VBoxContainer/ScrollContainer")
database_items_container = NodePath("VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2")
database_item_scene = ExtResource("2_fvenl")
add_button = NodePath("VBoxContainer/VBoxContainer/AddButton")
database_header = NodePath("VBoxContainer/DatabaseHeader")
database_filter = NodePath("VBoxContainer/DatabaseFilter")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="DatabaseHeader" parent="VBoxContainer" node_paths=PackedStringArray("database") instance=ExtResource("1_rw4k8")]
layout_mode = 2
database = NodePath("../..")

[node name="DatabaseFilter" parent="VBoxContainer" node_paths=PackedStringArray("database") instance=ExtResource("4_8x7pb")]
layout_mode = 2
database = NodePath("../..")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 21)
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
vertical_scroll_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DatabaseItem" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem2" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2
theme_type_variation = &"PanelContainerDatabaseItemHovered"

[node name="DatabaseItem3" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2
theme_type_variation = &"PanelContainerDatabaseItemSelected"

[node name="DatabaseItem4" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem5" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem6" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem7" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem8" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem9" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem10" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem11" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem12" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem13" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem14" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem15" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem16" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem17" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem18" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem19" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem20" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem21" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem22" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem23" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem24" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem25" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem26" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="DatabaseItem27" parent="VBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource("2_fvenl")]
layout_mode = 2

[node name="AddButton" type="Button" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
shortcut = SubResource("Shortcut_eg6c8")
shortcut_in_tooltip = false

[node name="TooltipComponent" parent="VBoxContainer/VBoxContainer/AddButton" instance=ExtResource("5_eg6c8")]
text = "Dodaj nowy (Ctrl+D)"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/VBoxContainer/AddButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_1c18i")
expand_mode = 2
stretch_mode = 5
